[gd_scene load_steps=6 format=2]

[ext_resource path="res://object/btn_sound/btn_sound.gd" type="Script" id=1]
[ext_resource path="res://asset/sounds/effect/hover_btn.mp3" type="AudioStream" id=2]
[ext_resource path="res://asset/sprite2D/UI/sound_on.png" type="Texture" id=3]
[ext_resource path="res://asset/font/arial.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 13
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Sound" type="TextureButton"]
margin_right = 36.0
margin_bottom = 36.0
toggle_mode = true
texture_normal = ExtResource( 3 )
script = ExtResource( 1 )
hover_sound = ExtResource( 2 )

[node name="LabelName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.0
margin_top = 6.0
margin_right = 75.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "Ã‚m thanh"
align = 1
valign = 1

[connection signal="mouse_entered" from="." to="." method="_on_Sound_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Sound_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_Sound_toggled"]
